Последняя клетка создана GPT-3

--- a/notebooks/cv_hw1.ipynb
+++ b/notebooks/cv_hw1.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/chetverkin/cvr_course/blob/develop/notebooks/cv_hw1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "6af5dede",
       "metadata": {
         "id": "6af5dede"
@@ -154,6 +144,7 @@
         "#############################################\n",
         "\n",
         "lth, hth = (0, 47, 131), (25, 165, 255)\n",
+        "#(0, 85, 60) (255, 205, 233)\n",
         "\n",
         "#############################################\n",
         "# YOUR DEFAULT PARAMETERS ABOVE\n",
@@ -214,8 +205,9 @@
         "        morph = cv2.morphologyEx(tophat, cv2.MORPH_OPEN, kernel_op)\n",
         "        cv2.imshow(\"MORPH\", morph)\n",
         "        \n",
-        "        cv2.imshow(\"frame\", tophat)\n",
-        "        #cv2.imshow(\"mask\", mask)\n",
+        "        #cv2.imshow(\"frame\", tophat)\n",
+        "        cv2.imshow(\"frame\", frame)\n",
+        "        cv2.imshow(\"mask\", mask)\n",
         "        \n",
         "        return (low_th, high_th)"
       ]
@@ -226,7 +218,7 @@
       "id": "f2626571",
       "metadata": {
         "id": "f2626571",
-        "outputId": "5ce31845-63bc-428f-e038-6253e964829c"
+        "outputId": "9c5015be-59be-4d1e-a9c0-15e27ccfd856"
       },
       "outputs": [
         {
@@ -239,10 +231,10 @@
         {
           "data": {
             "text/plain": [
-              "-1"
+              "113"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -527,6 +519,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "e65bda21",
+      "metadata": {
+        "id": "e65bda21"
+      },
+      "source": [
+        "# GPT-3"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "6439df30",
@@ -534,13 +536,90 @@
         "id": "6439df30"
       },
       "outputs": [],
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "\n",
+        "# Задаем видеофайл для обработки\n",
+        "cap = cv2.VideoCapture('/Users/dududugin/Desktop/CVR23/data_videos_fingers.mov')\n",
+        "\n",
+        "while True:\n",
+        "    # Читаем кадр из видео\n",
+        "    ret, frame = cap.read()\n",
+        "\n",
+        "    if ret:\n",
+        "        # Преобразуем кадр в HSV\n",
+        "        hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+        "\n",
+        "        # Определяем диапазон цветов для кожи\n",
+        "        lower_skin = np.array([0, 20, 70], dtype=np.uint8)\n",
+        "        upper_skin = np.array([20, 255, 255], dtype=np.uint8)\n",
+        "\n",
+        "        # Создаем маску, которая выделяет область кожи на изображении\n",
+        "        mask = cv2.inRange(hsv, (0, 47, 131), (25, 165, 255))\n",
+        "\n",
+        "        # Применяем морфологические операции для удаления шумов и заполнения дырок\n",
+        "        kernel = np.ones((5, 5), np.uint8)\n",
+        "        mask = cv2.erode(mask, kernel, iterations=1)\n",
+        "        mask = cv2.dilate(mask, kernel, iterations=1)\n",
+        "        cv2.imshow('mask', mask)\n",
+        "\n",
+        "        # Находим компоненты связности на маске\n",
+        "        connectivity = 4\n",
+        "        output = cv2.connectedComponentsWithStats(mask, connectivity, cv2.CV_32S)\n",
+        "\n",
+        "        # Получаем статистику по компонентам связности\n",
+        "        num_labels = output[0]\n",
+        "        stats = output[2]\n",
+        "\n",
+        "        # Считаем количество пальцев\n",
+        "        finger_count = 0\n",
+        "        for i in range(1, num_labels):\n",
+        "            # Получаем размеры компоненты связности\n",
+        "            left = stats[i, cv2.CC_STAT_LEFT]\n",
+        "            top = stats[i, cv2.CC_STAT_TOP]\n",
+        "            width = stats[i, cv2.CC_STAT_WIDTH]\n",
+        "            height = stats[i, cv2.CC_STAT_HEIGHT]\n",
+        "\n",
+        "            # Вычисляем соотношение ширины и высоты компоненты связности\n",
+        "            aspect_ratio = float(height) / width\n",
+        "\n",
+        "            # Проверяем, что компонента связности представляет собой палец\n",
+        "            if 1.2 < aspect_ratio < 3.0 and width > 50:\n",
+        "                finger_count += 1\n",
+        "\n",
+        "        # Выводим количество пальцев на изображении\n",
+        "        cv2.putText(frame, str(finger_count), (50, 50), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 2)\n",
+        "\n",
+        "        # Отображаем обработанный кадр\n",
+        "        cv2.imshow('frame', frame)\n",
+        "        cv2.waitKey(1000)\n",
+        "\n",
+        "        # Если нажата клавиша 'q', то выходим из цикла\n",
+        "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+        "            break\n",
+        "    else:\n",
+        "        break\n",
+        "\n",
+        "# Освобождаем ресурсы и закрываем окна\n",
+        "cap.release()\n",
+        "cv2.destroyAllWindows()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0007f774",
+      "metadata": {
+        "id": "0007f774"
+      },
+      "outputs": [],
       "source": []
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
